package jogador.domain;

public enum PosicaoEnum {
    GOLEIRO,
    DEFENSOR,
    MEIO_CAMPO,
    ATACANTE
}
